EGrammar/EGrammarParser.cpp

// Generated from EGrammar.g4 by ANTLR 4.8


#include "EGrammarListener.h"

#include "EGrammarParser.h"


using namespace antlrcpp;
using namespace antlr4;

EGrammarParser::EGrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

EGrammarParser::~EGrammarParser() {
  delete _interpreter;
}

std::string EGrammarParser::getGrammarFileName() const {
  return "EGrammar.g4";
}

const std::vector<std::string>& EGrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& EGrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartContext ------------------------------------------------------------------

EGrammarParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EGrammarParser::StartContext::EOF() {
  return getToken(EGrammarParser::EOF, 0);
}

std::vector<tree::TerminalNode *> EGrammarParser::StartContext::NEWLINE() {
  return getTokens(EGrammarParser::NEWLINE);
}

tree::TerminalNode* EGrammarParser::StartContext::NEWLINE(size_t i) {
  return getToken(EGrammarParser::NEWLINE, i);
}

std::vector<EGrammarParser::StatContext *> EGrammarParser::StartContext::stat() {
  return getRuleContexts<EGrammarParser::StatContext>();
}

EGrammarParser::StatContext* EGrammarParser::StartContext::stat(size_t i) {
  return getRuleContext<EGrammarParser::StatContext>(i);
}


size_t EGrammarParser::StartContext::getRuleIndex() const {
  return EGrammarParser::RuleStart;
}

void EGrammarParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void EGrammarParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

EGrammarParser::StartContext* EGrammarParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, EGrammarParser::RuleStart);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(23);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(20);
        match(EGrammarParser::NEWLINE); 
      }
      setState(25);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(32);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << EGrammarParser::T__5)
      | (1ULL << EGrammarParser::T__6)
      | (1ULL << EGrammarParser::T__7)
      | (1ULL << EGrammarParser::T__11)
      | (1ULL << EGrammarParser::ID)
      | (1ULL << EGrammarParser::NEWLINE))) != 0)) {
      setState(27);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << EGrammarParser::T__5)
        | (1ULL << EGrammarParser::T__6)
        | (1ULL << EGrammarParser::T__7)
        | (1ULL << EGrammarParser::T__11)
        | (1ULL << EGrammarParser::ID))) != 0)) {
        setState(26);
        stat();
      }
      setState(29);
      match(EGrammarParser::NEWLINE);
      setState(34);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(35);
    match(EGrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

EGrammarParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t EGrammarParser::StatContext::getRuleIndex() const {
  return EGrammarParser::RuleStat;
}

void EGrammarParser::StatContext::copyFrom(StatContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignParamContext ------------------------------------------------------------------

std::vector<tree::TerminalNode *> EGrammarParser::AssignParamContext::ID() {
  return getTokens(EGrammarParser::ID);
}

tree::TerminalNode* EGrammarParser::AssignParamContext::ID(size_t i) {
  return getToken(EGrammarParser::ID, i);
}

std::vector<tree::TerminalNode *> EGrammarParser::AssignParamContext::STRINGLITERAL() {
  return getTokens(EGrammarParser::STRINGLITERAL);
}

tree::TerminalNode* EGrammarParser::AssignParamContext::STRINGLITERAL(size_t i) {
  return getToken(EGrammarParser::STRINGLITERAL, i);
}

EGrammarParser::AssignParamContext::AssignParamContext(StatContext *ctx) { copyFrom(ctx); }

void EGrammarParser::AssignParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignParam(this);
}
void EGrammarParser::AssignParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignParam(this);
}
//----------------- NoneContext ------------------------------------------------------------------

EGrammarParser::LineContext* EGrammarParser::NoneContext::line() {
  return getRuleContext<EGrammarParser::LineContext>(0);
}

EGrammarParser::NoneContext::NoneContext(StatContext *ctx) { copyFrom(ctx); }

void EGrammarParser::NoneContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNone(this);
}
void EGrammarParser::NoneContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNone(this);
}
//----------------- OutParamContext ------------------------------------------------------------------

std::vector<tree::TerminalNode *> EGrammarParser::OutParamContext::ID() {
  return getTokens(EGrammarParser::ID);
}

tree::TerminalNode* EGrammarParser::OutParamContext::ID(size_t i) {
  return getToken(EGrammarParser::ID, i);
}

EGrammarParser::OutParamContext::OutParamContext(StatContext *ctx) { copyFrom(ctx); }

void EGrammarParser::OutParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOutParam(this);
}
void EGrammarParser::OutParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOutParam(this);
}
//----------------- DefFuncContext ------------------------------------------------------------------

EGrammarParser::FuncContext* EGrammarParser::DefFuncContext::func() {
  return getRuleContext<EGrammarParser::FuncContext>(0);
}

EGrammarParser::DefFuncContext::DefFuncContext(StatContext *ctx) { copyFrom(ctx); }

void EGrammarParser::DefFuncContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefFunc(this);
}
void EGrammarParser::DefFuncContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefFunc(this);
}
EGrammarParser::StatContext* EGrammarParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 2, EGrammarParser::RuleStat);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StatContext *>(_tracker.createInstance<EGrammarParser::DefFuncContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(37);
      func();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StatContext *>(_tracker.createInstance<EGrammarParser::NoneContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(38);
      line();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StatContext *>(_tracker.createInstance<EGrammarParser::AssignParamContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(39);
      match(EGrammarParser::ID);
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == EGrammarParser::T__0) {
        setState(40);
        match(EGrammarParser::T__0);
        setState(41);
        match(EGrammarParser::ID);
        setState(46);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(47);
      match(EGrammarParser::T__1);
      setState(48);
      dynamic_cast<AssignParamContext *>(_localctx)->SPEC_SYM = match(EGrammarParser::T__2);
      setState(49);
      match(EGrammarParser::T__3);
      setState(58);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == EGrammarParser::STRINGLITERAL) {
        setState(50);
        match(EGrammarParser::STRINGLITERAL);
        setState(55);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == EGrammarParser::T__0) {
          setState(51);
          match(EGrammarParser::T__0);
          setState(52);
          match(EGrammarParser::STRINGLITERAL);
          setState(57);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(60);
      match(EGrammarParser::T__4);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<StatContext *>(_tracker.createInstance<EGrammarParser::OutParamContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(61);
      dynamic_cast<OutParamContext *>(_localctx)->SPEC_SYM = match(EGrammarParser::T__5);

      setState(62);
      match(EGrammarParser::ID);
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == EGrammarParser::T__0) {
        setState(63);
        match(EGrammarParser::T__0);
        setState(64);
        match(EGrammarParser::ID);
        setState(69);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

EGrammarParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EGrammarParser::FuncContext::ID() {
  return getToken(EGrammarParser::ID, 0);
}

EGrammarParser::ArgsContext* EGrammarParser::FuncContext::args() {
  return getRuleContext<EGrammarParser::ArgsContext>(0);
}

std::vector<tree::TerminalNode *> EGrammarParser::FuncContext::NEWLINE() {
  return getTokens(EGrammarParser::NEWLINE);
}

tree::TerminalNode* EGrammarParser::FuncContext::NEWLINE(size_t i) {
  return getToken(EGrammarParser::NEWLINE, i);
}

std::vector<EGrammarParser::StatContext *> EGrammarParser::FuncContext::stat() {
  return getRuleContexts<EGrammarParser::StatContext>();
}

EGrammarParser::StatContext* EGrammarParser::FuncContext::stat(size_t i) {
  return getRuleContext<EGrammarParser::StatContext>(i);
}


size_t EGrammarParser::FuncContext::getRuleIndex() const {
  return EGrammarParser::RuleFunc;
}

void EGrammarParser::FuncContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc(this);
}

void EGrammarParser::FuncContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc(this);
}

EGrammarParser::FuncContext* EGrammarParser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 4, EGrammarParser::RuleFunc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    _la = _input->LA(1);
    if (!(_la == EGrammarParser::T__6

    || _la == EGrammarParser::T__7)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(73);
    match(EGrammarParser::ID);
    setState(74);
    match(EGrammarParser::T__3);
    setState(75);
    args();
    setState(76);
    match(EGrammarParser::T__4);
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EGrammarParser::T__8) {
      setState(77);
      match(EGrammarParser::T__8);
    }
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EGrammarParser::NEWLINE) {
      setState(80);
      match(EGrammarParser::NEWLINE);
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(93); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(86);
      stat();
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == EGrammarParser::NEWLINE) {
        setState(87);
        match(EGrammarParser::NEWLINE);
        setState(92);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(95); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << EGrammarParser::T__5)
      | (1ULL << EGrammarParser::T__6)
      | (1ULL << EGrammarParser::T__7)
      | (1ULL << EGrammarParser::T__11)
      | (1ULL << EGrammarParser::ID))) != 0));
    setState(97);
    dynamic_cast<FuncContext *>(_localctx)->SPEC_SYM = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == EGrammarParser::T__9

    || _la == EGrammarParser::T__10)) {
      dynamic_cast<FuncContext *>(_localctx)->SPEC_SYM = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

EGrammarParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t EGrammarParser::LineContext::getRuleIndex() const {
  return EGrammarParser::RuleLine;
}

void EGrammarParser::LineContext::copyFrom(LineContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignRetParamContext ------------------------------------------------------------------

std::vector<EGrammarParser::ExprContext *> EGrammarParser::AssignRetParamContext::expr() {
  return getRuleContexts<EGrammarParser::ExprContext>();
}

EGrammarParser::ExprContext* EGrammarParser::AssignRetParamContext::expr(size_t i) {
  return getRuleContext<EGrammarParser::ExprContext>(i);
}

EGrammarParser::AssignRetParamContext::AssignRetParamContext(LineContext *ctx) { copyFrom(ctx); }

void EGrammarParser::AssignRetParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignRetParam(this);
}
void EGrammarParser::AssignRetParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignRetParam(this);
}
//----------------- AssignContext ------------------------------------------------------------------

tree::TerminalNode* EGrammarParser::AssignContext::ID() {
  return getToken(EGrammarParser::ID, 0);
}

EGrammarParser::ExprContext* EGrammarParser::AssignContext::expr() {
  return getRuleContext<EGrammarParser::ExprContext>(0);
}

EGrammarParser::AssignContext::AssignContext(LineContext *ctx) { copyFrom(ctx); }

void EGrammarParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}
void EGrammarParser::AssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign(this);
}
EGrammarParser::LineContext* EGrammarParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 6, EGrammarParser::RuleLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(111);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EGrammarParser::ID: {
        _localctx = dynamic_cast<LineContext *>(_tracker.createInstance<EGrammarParser::AssignContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(99);
        match(EGrammarParser::ID);
        setState(100);
        match(EGrammarParser::T__1);
        setState(101);
        expr(0);
        break;
      }

      case EGrammarParser::T__11: {
        _localctx = dynamic_cast<LineContext *>(_tracker.createInstance<EGrammarParser::AssignRetParamContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(102);
        dynamic_cast<AssignRetParamContext *>(_localctx)->SPEC_SYM = match(EGrammarParser::T__11);

        setState(103);
        expr(0);
        setState(108);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == EGrammarParser::T__0) {
          setState(104);
          match(EGrammarParser::T__0);
          setState(105);
          expr(0);
          setState(110);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgsContext ------------------------------------------------------------------

EGrammarParser::ArgsContext::ArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> EGrammarParser::ArgsContext::ID() {
  return getTokens(EGrammarParser::ID);
}

tree::TerminalNode* EGrammarParser::ArgsContext::ID(size_t i) {
  return getToken(EGrammarParser::ID, i);
}


size_t EGrammarParser::ArgsContext::getRuleIndex() const {
  return EGrammarParser::RuleArgs;
}

void EGrammarParser::ArgsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgs(this);
}

void EGrammarParser::ArgsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgs(this);
}

EGrammarParser::ArgsContext* EGrammarParser::args() {
  ArgsContext *_localctx = _tracker.createInstance<ArgsContext>(_ctx, getState());
  enterRule(_localctx, 8, EGrammarParser::RuleArgs);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(EGrammarParser::ID);
    setState(118);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EGrammarParser::T__0) {
      setState(114);
      match(EGrammarParser::T__0);
      setState(115);
      match(EGrammarParser::ID);
      setState(120);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryBInFuncContext ------------------------------------------------------------------

EGrammarParser::UnaryBInFuncContext::UnaryBInFuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EGrammarParser::UnaryBInFuncContext::LOG() {
  return getToken(EGrammarParser::LOG, 0);
}

tree::TerminalNode* EGrammarParser::UnaryBInFuncContext::LOG10() {
  return getToken(EGrammarParser::LOG10, 0);
}

tree::TerminalNode* EGrammarParser::UnaryBInFuncContext::COS() {
  return getToken(EGrammarParser::COS, 0);
}

tree::TerminalNode* EGrammarParser::UnaryBInFuncContext::SIN() {
  return getToken(EGrammarParser::SIN, 0);
}

tree::TerminalNode* EGrammarParser::UnaryBInFuncContext::EXP() {
  return getToken(EGrammarParser::EXP, 0);
}


size_t EGrammarParser::UnaryBInFuncContext::getRuleIndex() const {
  return EGrammarParser::RuleUnaryBInFunc;
}

void EGrammarParser::UnaryBInFuncContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnaryBInFunc(this);
}

void EGrammarParser::UnaryBInFuncContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnaryBInFunc(this);
}

EGrammarParser::UnaryBInFuncContext* EGrammarParser::unaryBInFunc() {
  UnaryBInFuncContext *_localctx = _tracker.createInstance<UnaryBInFuncContext>(_ctx, getState());
  enterRule(_localctx, 10, EGrammarParser::RuleUnaryBInFunc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << EGrammarParser::LOG)
      | (1ULL << EGrammarParser::LOG10)
      | (1ULL << EGrammarParser::COS)
      | (1ULL << EGrammarParser::SIN)
      | (1ULL << EGrammarParser::EXP))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TConvBInFuncContext ------------------------------------------------------------------

EGrammarParser::TConvBInFuncContext::TConvBInFuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EGrammarParser::TConvBInFuncContext::C_FLOAT() {
  return getToken(EGrammarParser::C_FLOAT, 0);
}

tree::TerminalNode* EGrammarParser::TConvBInFuncContext::C_INT() {
  return getToken(EGrammarParser::C_INT, 0);
}

tree::TerminalNode* EGrammarParser::TConvBInFuncContext::C_DOUBLE() {
  return getToken(EGrammarParser::C_DOUBLE, 0);
}

tree::TerminalNode* EGrammarParser::TConvBInFuncContext::C_INT64() {
  return getToken(EGrammarParser::C_INT64, 0);
}


size_t EGrammarParser::TConvBInFuncContext::getRuleIndex() const {
  return EGrammarParser::RuleTConvBInFunc;
}

void EGrammarParser::TConvBInFuncContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTConvBInFunc(this);
}

void EGrammarParser::TConvBInFuncContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTConvBInFunc(this);
}

EGrammarParser::TConvBInFuncContext* EGrammarParser::tConvBInFunc() {
  TConvBInFuncContext *_localctx = _tracker.createInstance<TConvBInFuncContext>(_ctx, getState());
  enterRule(_localctx, 12, EGrammarParser::RuleTConvBInFunc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << EGrammarParser::C_FLOAT)
      | (1ULL << EGrammarParser::C_INT)
      | (1ULL << EGrammarParser::C_DOUBLE)
      | (1ULL << EGrammarParser::C_INT64))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Left_exprContext ------------------------------------------------------------------

EGrammarParser::Left_exprContext::Left_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EGrammarParser::ExprContext* EGrammarParser::Left_exprContext::expr() {
  return getRuleContext<EGrammarParser::ExprContext>(0);
}


size_t EGrammarParser::Left_exprContext::getRuleIndex() const {
  return EGrammarParser::RuleLeft_expr;
}

void EGrammarParser::Left_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLeft_expr(this);
}

void EGrammarParser::Left_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLeft_expr(this);
}

EGrammarParser::Left_exprContext* EGrammarParser::left_expr() {
  Left_exprContext *_localctx = _tracker.createInstance<Left_exprContext>(_ctx, getState());
  enterRule(_localctx, 14, EGrammarParser::RuleLeft_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Right_exprContext ------------------------------------------------------------------

EGrammarParser::Right_exprContext::Right_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EGrammarParser::ExprContext* EGrammarParser::Right_exprContext::expr() {
  return getRuleContext<EGrammarParser::ExprContext>(0);
}


size_t EGrammarParser::Right_exprContext::getRuleIndex() const {
  return EGrammarParser::RuleRight_expr;
}

void EGrammarParser::Right_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRight_expr(this);
}

void EGrammarParser::Right_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRight_expr(this);
}

EGrammarParser::Right_exprContext* EGrammarParser::right_expr() {
  Right_exprContext *_localctx = _tracker.createInstance<Right_exprContext>(_ctx, getState());
  enterRule(_localctx, 16, EGrammarParser::RuleRight_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

EGrammarParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t EGrammarParser::ExprContext::getRuleIndex() const {
  return EGrammarParser::RuleExpr;
}

void EGrammarParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CallConvolveContext ------------------------------------------------------------------

std::vector<EGrammarParser::ExprContext *> EGrammarParser::CallConvolveContext::expr() {
  return getRuleContexts<EGrammarParser::ExprContext>();
}

EGrammarParser::ExprContext* EGrammarParser::CallConvolveContext::expr(size_t i) {
  return getRuleContext<EGrammarParser::ExprContext>(i);
}

tree::TerminalNode* EGrammarParser::CallConvolveContext::STRINGLITERAL() {
  return getToken(EGrammarParser::STRINGLITERAL, 0);
}

EGrammarParser::CallConvolveContext::CallConvolveContext(ExprContext *ctx) { copyFrom(ctx); }
